# Fire_Prediction-Flask-ML-

./: .replit  README.md  forest_fire.py  pyproject.toml
static/templates/: forest.html
