[tool.poetry]
name = "repl-nix-fireprediction-flask-ml-"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_fireprediction_flask_ml_"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
numpy = "^2.0.1"
scikit-learn = "^1.5.1"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
